# test-codex

./: README.md  pyproject.toml
datasci_tool/: __init__.py  config.py  embeddings.py  pipeline.py  research_agent.py  summary.py  vector_store.py
scripts/: run_pipeline.py
tests/: test_pipeline.py
