[project]
name = "datasci-research-agent"
version = "0.1.0"
description = "Automated data science research pipeline using the OpenAI agent API"
authors = [{name = "OpenAI Agent"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.25.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
